; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/core/extr_cma.c_cma_cancel_operation.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/core/extr_cma.c_cma_cancel_operation.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rdma_id_private = type { i32, %struct.TYPE_6__ }
%struct.TYPE_6__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.rdma_id_private*, i32)* @cma_cancel_operation to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cma_cancel_operation(%struct.rdma_id_private* %0, i32 %1) #0 {
  %3 = alloca %struct.rdma_id_private*, align 8
  %4 = alloca i32, align 4
  store %struct.rdma_id_private* %0, %struct.rdma_id_private** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  switch i32 %5, label %30 [
    i32 130, label %6
    i32 128, label %13
    i32 129, label %16
  ]

6:                                                ; preds = %2
  %7 = load %struct.rdma_id_private*, %struct.rdma_id_private** %3, align 8
  %8 = getelementptr inbounds %struct.rdma_id_private, %struct.rdma_id_private* %7, i32 0, i32 1
  %9 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %10, i32 0, i32 0
  %12 = call i32 @rdma_addr_cancel(i32* %11)
  br label %31

13:                                               ; preds = %2
  %14 = load %struct.rdma_id_private*, %struct.rdma_id_private** %3, align 8
  %15 = call i32 @cma_cancel_route(%struct.rdma_id_private* %14)
  br label %31

16:                                               ; preds = %2
  %17 = load %struct.rdma_id_private*, %struct.rdma_id_private** %3, align 8
  %18 = call i32 @cma_src_addr(%struct.rdma_id_private* %17)
  %19 = call i32 @cma_any_addr(i32 %18)
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %21, label %29

21:                                               ; preds = %16
  %22 = load %struct.rdma_id_private*, %struct.rdma_id_private** %3, align 8
  %23 = getelementptr inbounds %struct.rdma_id_private, %struct.rdma_id_private* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %29, label %26

26:                                               ; preds = %21
  %27 = load %struct.rdma_id_private*, %struct.rdma_id_private** %3, align 8
  %28 = call i32 @cma_cancel_listens(%struct.rdma_id_private* %27)
  br label %29

29:                                               ; preds = %26, %21, %16
  br label %31

30:                                               ; preds = %2
  br label %31

31:                                               ; preds = %30, %29, %13, %6
  ret void
}

declare dso_local i32 @rdma_addr_cancel(i32*) #1

declare dso_local i32 @cma_cancel_route(%struct.rdma_id_private*) #1

declare dso_local i32 @cma_any_addr(i32) #1

declare dso_local i32 @cma_src_addr(%struct.rdma_id_private*) #1

declare dso_local i32 @cma_cancel_listens(%struct.rdma_id_private*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
